contrib/kube-prometheus/manifests/grafana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - grafana.platform.polylith.io
    secretName: grafana-certificate
  rules:
  - host: grafana.platform.polylith.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
---
